@startuml
' Definición de colores y estilos
skinparam classBackgroundColor #F0F8FF
skinparam classBorderColor #4682B4
skinparam classArrowColor #4682B4
skinparam noteBackgroundColor #FFFACD
skinparam noteBorderColor #8B4513

class "Usuario" {
    - id: int
    - nombre: string
    - tipo: string // Administrador / Investigador / Invitado
    + buscarInformacion(tipo: string, filtros: Map): void
    + seleccionarFiltrosAvanzados(filtros: Map): void
}

class "Sistema" {
    - nombre: string
    + realizarBusqueda(tipo: string, filtros: Map): void
    + mostrarResultados(tabla: Table): void
}

class "Criminals" {
    - id: int
    - nombre: string
    - apellido: string
    - historial: string
    + buscar(filtros: Map): List<Criminal>
}

class "CriminalVehicles" {
    - id: int
    - marca: string
    - modelo: string
    - placa: string
    + buscar(filtros: Map): List<CriminalVehicle>
}

class "Organizations" {
    - id: int
    - nombre: string
    - tipo: string
    - ubicacion: string
    + buscar(filtros: Map): List<Organization>
}

class "ArrestHistories" {
    - id: int
    - delincuenteId: int
    - fecha: date
    - detalles: string
    + filtrarPorHistorial(filtros: Map): List<ArrestHistory>
}

class "Convictions" {
    - id: int
    - delincuenteId: int
    - tipo: string
    - fecha: date
    + filtrarPorCondenas(filtros: Map): List<Conviction>
}

Usuario --|> Sistema : Interactúa
Sistema -- "1" Criminals : Consulta
Sistema -- "1" CriminalVehicles : Consulta
Sistema -- "1" Organizations : Consulta
Sistema -- "1" ArrestHistories : Consulta
Sistema -- "1" Convictions : Consulta

Criminals --|> ArrestHistories : Relacionado con
Criminals --|> Convictions : Relacionado con
CriminalVehicles --|> Criminals : Relacionado con
Organizations --|> Criminals : Relacionado con

@enduml
